focus visible to avoid focus styles on pointer

--- a/static/style.css
+++ b/static/style.css
@@ -22,7 +22,7 @@
 	border-radius: 0;
 }
 
-*:focus {
+*:focus-visible {
 	outline: var(--outline);
 }
 
